styling fixes & fixes cathy animation on mobile with bandaid for now

--- a/src/components/PlayerCustom/PlayerCustomization.css
+++ b/src/components/PlayerCustom/PlayerCustomization.css
@@ -77,5 +77,7 @@ ul.player-custom-options button.small.selected {
   ul.player-custom-options {
     flex-direction: row;
     flex-wrap: wrap;
+    top: 8px;
+    bottom: auto;
   }
 }
